Enhance Architecture
